Code
 File "<ipython-input-9-c0a3bd94deb0>", line 6
    file2_path = 'C:\Users\jainnbr\masFxSystemX12062023DataWithHistory.csv
                                                                          ^
SyntaxError: EOL while scanning string literal
